# Aura

backend/: .env  main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  bounties.py  deals.py  lists.py
backend/app/core/: config.py  security.py
backend/app/models/: bounty.py  connection_list.py  deal.py  user.py
frontend/: .eslintrc.js  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: animations.css  main.css
frontend/components/bounty/: .gitkeep  BountyCard.vue  BountyFilters.vue  BountyForm.vue
frontend/components/deal/: .gitkeep  DealChatWindow.vue
frontend/components/layout/: .gitkeep  AppFooter.vue  AppHeader.vue  UserNav.vue
frontend/components/mascot/: NexusCrystal.vue
frontend/components/motion/: StaggeredList.vue
frontend/components/ui/: .gitkeep  AppButton.vue  AppLoader.vue  AppSwitch.vue  FormInput.vue  FormTextarea.vue  GlassCard.vue  ToastContainer.vue  Tooltip.vue
frontend/composables/: index.ts  useApiFetch.ts  useTimeAgo.ts
frontend/content/: content.config.ts  index.md
frontend/layouts/: default.vue  landing.vue
frontend/pages/: dashboard.vue  index.vue  manifesto.vue
frontend/pages/auth/: .gitkeep  login.vue  register.vue
frontend/pages/bounties/: .gitkeep  [id].vue  index.vue  new.vue
frontend/pages/deals/: .gitkeep  [id].vue
frontend/pages/u/: .gitkeep  (+1 more)
frontend/plugins/: apexcharts.client.js  apexcharts.client.ts  vuetify.ts
frontend/store/: auth.ts  ui.ts
frontend/types/: index.ts
(+4 files in other folders)
